<resources>
    <string name="app_name">NavigationComponentExample</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="screen_one">Screen One</string>
    <string name="screen_two">Screen Two</string>
    <string name="screen_three">Screen Three</string>
    <string name="go_to_screen_two">Go to screen two</string>
    <string name="go_to_screen_three">Go to screen three</string>
    <string name="go_to_screen_one">Go to screen one</string>
</resources>